--- a/themes/eduinlight-theme/polybar.config
+++ b/themes/eduinlight-theme/polybar.config
@@ -81,7 +81,7 @@ font-0 = Noto Sans:pixelsize=10;1
 font-1 = Unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = Siji:pixelsize=10;1
 modules-center =
-modules-right = filesystem xbacklight pulseaudio xkeyboard memory cpu wlan eth battery temperature date powermenu
+modules-right = xkeyboard filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature date powermenu
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -284,7 +284,7 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-date = %%{F#fff}%A, %B %d, %Y  %%{F#fff}%I:%M:%{F#666}%%{F#fba922}%S%%{F-} %p
+date = %%{F#fba922}%A, %B %d, %Y  %%{F#fba922}%I:%M %p
 ;interval = 5
 ;date =
 ;date-alt = " %Y-%m-%d"
