--- a/themes/eduinlight-theme/polybar.config
+++ b/themes/eduinlight-theme/polybar.config
@@ -24,6 +24,7 @@ foreground-alt = #FFFFFF
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
+color4 = #61afef
 
 
 [bar/mainbar0]
@@ -80,8 +81,8 @@ module-margin-right = 2
 font-0 = Noto Sans:pixelsize=10;1
 font-1 = Unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = Siji:pixelsize=10;1
-modules-center =
-modules-right = xkeyboard filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature date
+modules-center = 
+modules-right = date xkeyboard filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -246,7 +247,7 @@ label = %percentage_used%%
 
 [module/wlan]
 type = internal/network
-interface = wlp3s0
+interface = wlp9s0
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
@@ -352,7 +353,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = AC
 full-at = 98
 
