--- a/themes/eduinlight-theme/polybar.config
+++ b/themes/eduinlight-theme/polybar.config
@@ -59,7 +59,6 @@ type = custom/script
 exec = leftwm-state -w 3 -t $SCRIPTPATH/template.liquid
 tail = true
 
-
 [bar/barbase]
 width = ${env:width}
 offset-x = ${env:offsetx}
@@ -82,7 +81,7 @@ font-0 = Noto Sans:pixelsize=10;1
 font-1 = Unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = Siji:pixelsize=10;1
 modules-center = 
-modules-right = date xkeyboard filesystem xbacklight pulseaudio memory cpu wlan eth battery temperature
+modules-right = date xkeyboard filesystem xbacklight pulseaudio memory cpu alsa wlan eth battery temperature
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -102,7 +101,6 @@ label-urgent-background = ${colors.background}
 label-urgent-underline  = ${colors.alert}
 label-empty = " %icon% %name%  "
 label-empty-foreground = ${colors.foreground}
-
 
 [module/xwindow]
 type = internal/xwindow
