--- a/themes/eduinlight-theme/polybar.config
+++ b/themes/eduinlight-theme/polybar.config
@@ -81,7 +81,7 @@ font-0 = Noto Sans:pixelsize=10;1
 font-1 = Unifont:fontformat=truetype:size=8:antialias=false;0
 font-2 = Siji:pixelsize=10;1
 modules-center = 
-modules-right = date xkeyboard filesystem xbacklight pulseaudio memory cpu alsa wlan eth battery temperature
+modules-right = date right1 xkeyboard filesystem xbacklight pulseaudio memory cpu alsa wlan eth battery temperature
 tray-position = right
 tray-padding = 2
 cursor-click = pointer
@@ -92,13 +92,13 @@ type = internal/xworkspaces
 label-active = " %icon% %name%  "
 label-active-foreground = ${colors.foreground-alt}
 label-active-background = ${colors.background-alt}
-label-active-underline = ${colors.primary}
+; label-active-underline = ${colors.primary}
 label-occupied = " %icon% %name%  "
-label-occupied-underline = ${colors.secondary}
+; label-occupied-underline = ${colors.secondary}
 label-urgent = " %icon% %name%  "
 label-urgent-foreground = ${colors.foreground}
 label-urgent-background = ${colors.background}
-label-urgent-underline  = ${colors.alert}
+; label-urgent-underline  = ${colors.alert}
 label-empty = " %icon% %name%  "
 label-empty-foreground = ${colors.foreground}
 
@@ -115,6 +115,7 @@ label-layout = %layout%
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-background = ${colors.secondary}
+background = ${colors.background-alt}
 
 [module/filesystem]
 type = internal/fs
@@ -128,7 +129,7 @@ label-unmounted-foreground = ${colors.foreground-alt}
 type = internal/bspwm
 label-focused = %index%
 label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+; label-focused-underline= ${colors.primary}
 label-focused-padding = 2
 label-occupied = %index%
 label-occupied-padding = 2
@@ -155,7 +156,7 @@ label-mode-background = ${colors.primary}
 ; focused = Active workspace on focused monitor
 label-focused = %index%
 label-focused-background = ${module/bspwm.label-focused-background}
-label-focused-underline = ${module/bspwm.label-focused-underline}
+; label-focused-underline = ${module/bspwm.label-focused-underline}
 label-focused-padding = ${module/bspwm.label-focused-padding}
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%
@@ -163,7 +164,7 @@ label-unfocused-padding = ${module/bspwm.label-occupied-padding}
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
 label-visible-background = ${self.label-focused-background}
-label-visible-underline = ${self.label-focused-underline}
+; label-visible-underline = ${self.label-focused-underline}
 label-visible-padding = ${self.label-focused-padding}
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
@@ -208,7 +209,7 @@ type = internal/cpu
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+; format-underline = #f90000
 label = %percentage:2%%
 
 [module/memory]
@@ -216,7 +217,7 @@ type = internal/memory
 interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+; format-underline = #4bffdc
 label = %percentage_used%%
 
 [module/wlan]
@@ -224,7 +225,7 @@ type = internal/network
 interface = wlp9s0
 interval = 3.0
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+; format-connected-underline = #9f78e1
 label-connected = %essid%
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -242,7 +243,7 @@ ramp-signal-foreground = ${colors.foreground-alt}
 type = internal/network
 interface = enp0s25
 interval = 3.0
-format-connected-underline = #55aa55
+; format-connected-underline = #55aa55
 format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 label-connected = %local_ip%
@@ -254,7 +255,7 @@ format-disconnected =
 
 [module/date]
 type = internal/date
-date = %%{F#fba922}%A, %B %d, %Y  %%{F#fba922}%I:%M %p
+date = %A, %B %d, %Y  %%{F#fba922}%I:%M %p
 ;interval = 5
 ;date =
 ;date-alt = " %Y-%m-%d"
@@ -262,7 +263,7 @@ date = %%{F#fba922}%A, %B %d, %Y  %%{F#fba922}%I:%M %p
 ;time-alt = %H:%M:%S
 ;format-prefix = 
 ;format-prefix-foreground = ${colors.foreground-alt}
-;format-underline = #0a6cf5
+format-underline = #0a6cf5
 ;label = %date% %time%
 
 [module/pulseaudio]
@@ -291,28 +292,29 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/alsa]
 type = internal/alsa
-format-volume = <label-volume> <bar-volume>
-label-volume = VOL
+; format-volume = <label-volume> <bar-volume>
+format-volume = <label-volume>
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
 format-muted-prefix = " "
 format-muted-foreground = ${colors.foreground-alt}
-label-muted = sound muted
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = |
-bar-volume-indicator-font = 2
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+label-muted = 0%
+; bar-volume-width = 10
+; bar-volume-foreground-0 = #55aa55
+; bar-volume-foreground-1 = #55aa55
+; bar-volume-foreground-2 = #55aa55
+; bar-volume-foreground-3 = #55aa55
+; bar-volume-foreground-4 = #55aa55
+; bar-volume-foreground-5 = #f5a70a
+; bar-volume-foreground-6 = #ff5555
+; bar-volume-gradient = false
+; bar-volume-indicator = |
+; bar-volume-indicator-font = 2
+; bar-volume-fill = ─
+; bar-volume-fill-font = 2
+; bar-volume-empty = ─
+; bar-volume-empty-font = 2
+; bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/battery]
 type = internal/battery
@@ -320,12 +322,12 @@ battery = BAT1
 adapter = AC
 full-at = 98
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+; format-charging-underline = #ffb52a
 format-discharging = <animation-discharging> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
+; format-discharging-underline = ${self.format-charging-underline}
 format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
-format-full-underline = ${self.format-charging-underline}
+; format-full-underline = ${self.format-charging-underline}
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
@@ -346,9 +348,9 @@ type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
 format = <ramp> <label>
-format-underline = #f50a4d
+; format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
+; format-warn-underline = ${self.format-underline}
 label = %temperature-c%
 label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
