--- a/themes/eduinlight-theme/polybar.config
+++ b/themes/eduinlight-theme/polybar.config
@@ -346,7 +346,7 @@ animation-discharging-framerate = 750
 type = internal/temperature
 thermal-zone = 0
 warn-temperature = 60
-format = <ramp> <label>
+format = CPU <ramp> <label>
 ; format-underline = #f50a4d
 format-warn = <ramp> <label-warn>
 ; format-warn-underline = ${self.format-underline}
